Добавлены сущности shop и card
