# internal/dto/shop.go
@@ -1,0 +1,16 @@
+package dto
+
+type ShopRequest struct {
+	Name    string `json:"name"`
+	Address string `json:"address"`
+}
+
+type ShopResponse struct {
+	Id      string `json:"id"`
+	Name    string `json:"name"`
+	Address string `json:"address"`
+}
+
+type ShopListResponse struct {
+	Shops []ShopResponse `json:"shops"`
+}
