# internal/entities/card.go
@@ -1,0 +1,9 @@
+package entities
+
+type Card struct {
+	Id             string
+	NumberOfCard   string
+	ExpirationDate string
+	Cvv            string
+	UserId         string
+}
